Fixed horizontal alignment

--- a/MMM-CountDown.css
+++ b/MMM-CountDown.css
@@ -1,19 +1,17 @@
 .counterWrapper  {
-    text-align: center;
     color: #fff;
-    /*background-color: black;*/
 }
 
 .counterWrapper .icon {
     display: inline-block;
     font-size: 50px;
-    text-align: center;
     padding-right: 5px;
 }
 
 .counterWrapper .digit {
     display: inline-block;
     padding-left: 5px;
+    text-align: center;
 }
 
 .counterWrapper .number {    
@@ -22,8 +20,6 @@
 
 .counterWrapper .label {
     font-size: 16px;
-    padding-bottom: 5px;    
-    /*text-transform: uppercase;*/
-    text-align: center;
+    padding-bottom: 5px;  
 }
 
